hubSide/force-app/main/default/objects/Contact/fields/Birth_departement__c.field-meta.xml
<CustomField>
    <fullName>Birth_departement__c</fullName>
    <label>Birth departement</label>
    <length>30</length>
    <type>Text</type>
</CustomField>