hubSide/force-app/main/default/objects/Contact/fields/Canal_contact__c.field-meta.xml
<CustomField>
    <fullName>Canal_contact__c</fullName>
    <label>Canal contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
                <label>Téléphone</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
                <label>Courrier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>