hubSide/force-app/main/default/objects/Contact/fields/contactLanguage__c.field-meta.xml
<CustomField>
    <fullName>contactLanguage__c</fullName>
    <description>RFC 5646</description>
    <label>Contact Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fr-FR</fullName>
            </value>
            <value>
                <fullName>fr-BE</fullName>
            </value>
            <value>
                <fullName>nl-BE</fullName>
            </value>
            <value>
                <fullName>nl-NL</fullName>
            </value>
            <value>
                <fullName>es-ES</fullName>
            </value>
            <value>
                <fullName>pt-PT</fullName>
            </value>
            <value>
                <fullName>it-IT</fullName>
            </value>
            <value>
                <fullName>unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>