hubSide/force-app/main/default/objects/Contact/fields/Opt_in_Email__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt in Email</label>
    <type>Checkbox</type>
</CustomField>