hubSide/force-app/main/default/objects/Contact/fields/Opt_in_SMS__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt in SMS</label>
    <type>Checkbox</type>
</CustomField>