hubSide/force-app/main/default/objects/Contact/fields/Pays_naissance__c.field-meta.xml
<CustomField>
    <fullName>Pays_naissance__c</fullName>
    <label>Pays de naissance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>