hubSide/force-app/main/default/objects/Contact/fields/Role_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Role_entreprise__c</fullName>
    <label>Rôle entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Décisionnaire</fullName>
            </value>
            <value>
                <fullName>Signataire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>