hubSide/force-app/main/default/objects/Contact/recordTypes/Contact_sinistre.recordType-meta.xml
<RecordType>
    <fullName>Contact_sinistre</fullName>
    <active>true</active>
    <label>Contact sinistre</label>
</RecordType>